--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "devDependencies": {
         "@mdi/font": "^7.4.47",
         "@popperjs/core": "^2.11.6",
-        "@vitejs/plugin-vue": "^4.5.0",
+        "@vitejs/plugin-vue": "^5.2.1",
         "@vue/eslint-config-standard": "^9.0.0",
         "@vue/test-utils": "^2.4.6",
         "axios": "^1.8.1",
@@ -20,6 +20,7 @@
         "eslint-plugin-node": "^11.1.0",
         "eslint-plugin-promise": "^7.2.1",
         "eslint-plugin-vue": "^9.32.0",
+        "laravel-vite-plugin": "^1.2.0",
         "sass": "^1.56.1",
         "sass-loader": "^16.0.5",
         "vite": "^6.2.0",
