--- a/package.json
+++ b/package.json
@@ -31,8 +31,12 @@
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.7.2",
         "@vue/compiler-sfc": "^3.5.13",
+        "@vuelidate/core": "^2.0.3",
+        "@vuelidate/validators": "^2.0.4",
         "expect": "^29.7.0",
+        "gravatar": "^1.8.2",
         "moment": "^2.30.1",
+        "pinia": "^3.0.1",
         "socket.io-client": "^4.8.1",
         "typeface-montserrat": "^1.1.13",
         "typeface-roboto": "^1.1.13",
